--- a/src/app/posts/post-create/post-create-component.html
+++ b/src/app/posts/post-create/post-create-component.html
@@ -2,11 +2,11 @@
 <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
-      <input matInput type="text" ngModel name="title" required #title="ngModel" />
+      <input placeholder="Post Title" matInput type="text" ngModel name="title" required #title="ngModel" />
       <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea rows="6" matInput ngModel name="content" required #content="ngModel"></textarea>
+      <textarea placeholder="Post Content"  rows="6" matInput ngModel name="content" required #content="ngModel"></textarea>
       <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
     </mat-form-field>
     <button color="primary" mat-raised-button type="submit">Save Post</button>
