--- a/src/app/posts/post-list/post-list-component.html
+++ b/src/app/posts/post-list/post-list-component.html
@@ -3,7 +3,11 @@
     <mat-expansion-panel-header>
       {{ post['title'] }}
     </mat-expansion-panel-header>
-    {{ post['content'] }}
+    <p>{{ post['content'] }}</p>
+    <mat-action-row>
+      <button mat-button color="primary">EDIT</button>
+      <button mat-button color="warn">DELETE</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p *ngIf="posts.length <= 0" class="'mat-body-1 info-text">No posts added yet!</p>
