--- a/src/app/posts/post-create/post-create-component.scss
+++ b/src/app/posts/post-create/post-create-component.scss
@@ -3,3 +3,19 @@ mat-card {
       width: 100%;
   }
 }
+
+mat-spinner {
+  margin: auto;
+}
+
+input[type="file"] {
+  visibility: hidden;
+}
+
+.image-preview {
+  height: 5rem;
+  margin: 1rem 0;
+  img{
+    height: 100%;
+  }
+}
