--- a/src/app/header/header-component.html
+++ b/src/app/header/header-component.html
@@ -1,1 +1,9 @@
-<mat-toolbar color="primary">My Messages</mat-toolbar>
+<mat-toolbar color="primary">
+  <span><a routerLink="/">MyMessages</a></span>
+  <span class="spacer"></span>
+  <ul>
+    <li>
+      <a routerLink="/create" mat-button routerLinkActive="mat-accent">New Post</a>
+    </li>
+  </ul>
+</mat-toolbar>
