--- a/src/app/posts/post-create/post-create-component.html
+++ b/src/app/posts/post-create/post-create-component.html
@@ -1,13 +1,30 @@
 <!-- <textarea rows="6" [value]="newPost" #postInput></textarea> -->
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form [formGroup]="form" *ngIf="!isLoading" (submit)="onSavePost()">
     <mat-form-field>
-      <input placeholder="Post Title" matInput type="text" ngModel name="title" required #title="ngModel" />
-      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+      <input
+      placeholder="Post Title"
+      matInput type="text"
+      formControlName="title"
+      name="title" />
+      <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+      <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
     <mat-form-field>
-      <textarea placeholder="Post Content"  rows="6" matInput ngModel name="content" required #content="ngModel"></textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+      <textarea
+      placeholder="Post Content"
+      rows="6"
+      matInput
+      formControlName="content"
+      name="content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please enter a post content</mat-error>
     </mat-form-field>
     <button color="primary" mat-raised-button type="submit">Save Post</button>
 </form>
