--- a/src/app/header/header-component.html
+++ b/src/app/header/header-component.html
@@ -5,5 +5,8 @@
     <li>
       <a routerLink="/create" mat-button routerLinkActive="mat-accent">New Post</a>
     </li>
+    <li>
+      <a routerLink="/login" mat-button routerLinkActive="mat-accent">Login</a>
+    </li>
   </ul>
 </mat-toolbar>
