--- a/src/app/header/header-component.html
+++ b/src/app/header/header-component.html
@@ -8,5 +8,8 @@
     <li>
       <a routerLink="/login" mat-button routerLinkActive="mat-accent">Login</a>
     </li>
+    <li>
+      <a routerLink="/signup" mat-button routerLinkActive="mat-accent">Signup</a>
+    </li>
   </ul>
 </mat-toolbar>
