--- a/src/app/header/header-component.html
+++ b/src/app/header/header-component.html
@@ -2,14 +2,17 @@
   <span><a routerLink="/">MyMessages</a></span>
   <span class="spacer"></span>
   <ul>
-    <li>
+    <li *ngIf="userIsAuthenticated">
       <a routerLink="/create" mat-button routerLinkActive="mat-accent">New Post</a>
     </li>
-    <li>
+    <li *ngIf="!userIsAuthenticated">
       <a routerLink="/login" mat-button routerLinkActive="mat-accent">Login</a>
     </li>
-    <li>
+    <li *ngIf="!userIsAuthenticated">
       <a routerLink="/signup" mat-button routerLinkActive="mat-accent">Signup</a>
+    </li>
+    <li *ngIf="userIsAuthenticated">
+      <button mat-button (click)="onLogout()">Logout</button>
     </li>
   </ul>
 </mat-toolbar>
